# salary-show

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  graph.py  hh_connector.py  tg_bot.py
